--- a/2048/styles.css
+++ b/2048/styles.css
@@ -20,7 +20,7 @@ h1 {
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(4, 100px);
   gap: 10px;
-  background-color: #bbada0;
+  background-color: #a0bba8;
   padding: 10px;
   border-radius: 10px;
 }
@@ -34,65 +34,65 @@ h1 {
   font-size: 24px;
   font-weight: bold;
   border-radius: 5px;
-  color: #776e65;
-  background-color: #cdc1b4;
+  color: #657770;
+  background-color: #b4cdbe;
 }
 
 .tile[data-value="2"] {
-  background-color: #eee4da;
+  background-color: #daeee3;
 }
 
 .tile[data-value="4"] {
-  background-color: #ede0c8;
+  background-color: #c8eddf;
 }
 
 .tile[data-value="8"] {
-  background-color: #f2b179;
+  background-color: #8dcaa8;
   color: #f9f6f2;
 }
 
 .tile[data-value="16"] {
-  background-color: #f59563;
+  background-color: #77b9a4;
   color: #f9f6f2;
 }
 
 .tile[data-value="32"] {
-  background-color: #f67c5f;
+  background-color: #8fb6a8;
   color: #f9f6f2;
 }
 
 .tile[data-value="64"] {
-  background-color: #f65e3b;
+  background-color: #6fa893;
   color: #f9f6f2;
 }
 
 .tile[data-value="128"] {
-  background-color: #edcf72;
+  background-color: #55aea1;
   color: #f9f6f2;
 }
 
 .tile[data-value="256"] {
-  background-color: #edcc61;
+  background-color: #54c7cb;
   color: #f9f6f2;
 }
 
 .tile[data-value="512"] {
-  background-color: #edc850;
+  background-color: #6ba5b3;
   color: #f9f6f2;
 }
 
 .tile[data-value="1024"] {
-  background-color: #edc53f;
+  background-color: #37a49b;
   color: #f9f6f2;
 }
 
 .tile[data-value="2048"] {
-  background-color: #edc22e;
+  background-color: #6b989f;
   color: #f9f6f2;
 }
 
 #score {
   margin-top: 20px;
   font-size: 20px;
-  color: #776e65;
+  color: #657771;
 }
